--- a/03_setup_k8s_platform/deploy_monitoring_loki.yml
+++ b/03_setup_k8s_platform/deploy_monitoring_loki.yml
@@ -33,6 +33,10 @@
         name: "{{ monitoring_loki_helm_repo_name }}"
         url: "{{ monitoring_loki_helm_repo_url }}"
 
+    - name: Print the gateway for each host when defined
+      ansible.builtin.debug:
+        msg: S{{ lookup('template', 'monitoring/loki-values.yaml.j2') | from_yaml }}
+
     - name: Install Helm package with values loaded from template
       community.kubernetes.helm:
         name: "{{ monitoring_loki_helm_release_name }}"
