--- a/03_setup_k8s_platform/deploy_monitoring_loki.yml
+++ b/03_setup_k8s_platform/deploy_monitoring_loki.yml
@@ -14,6 +14,11 @@
         file: monitoring_loki.yml
         name: monitoring_loki
 
+    - name: Read GRAFANA values
+      ansible.builtin.include_vars:
+        file: monitoring_grafana.yml
+        name: monitoring_grafana
+
     - name: Set default facts for K8S
       ansible.builtin.set_fact:
         k8s_config: "{{ default.K8S_KUBECONFIG }}"
@@ -33,9 +38,11 @@
         name: "{{ monitoring_loki_helm_repo_name }}"
         url: "{{ monitoring_loki_helm_repo_url }}"
 
+
     - name: Print the gateway for each host when defined
       ansible.builtin.debug:
-        msg: S{{ lookup('template', 'monitoring/loki-values.yaml.j2') | from_yaml }}
+        msg: "{{ lookup('template', 'monitoring/loki-values.yaml.j2') | from_yaml }}"
+
 
     - name: Install Helm package with values loaded from template
       community.kubernetes.helm:
