--- a/03_setup_k8s_platform/deploy_monitoring_loki.yml
+++ b/03_setup_k8s_platform/deploy_monitoring_loki.yml
@@ -9,7 +9,7 @@
         file: default.yml
         name: default
 
-    - name: Read GRAFANA values
+    - name: Read Loki values
       ansible.builtin.include_vars:
         file: monitoring_loki.yml
         name: monitoring_loki
@@ -33,16 +33,16 @@
         name: "{{ monitoring_loki_helm_repo_name }}"
         url: "{{ monitoring_loki_helm_repo_url }}"
 
-    # - name: Install Helm package with values loaded from template
-    #   community.kubernetes.helm:
-    #     name: "{{ monitoring_loki_helm_release_name }}"
-    #     chart_ref: "{{ monitoring_loki_helm_repo_name }}/{{ monitoring_loki_helm_chart_name }}"
-    #     kubeconfig: "{{ k8s_config }}"
-    #     context: "{{ k8s_context }}"
-    #     release_namespace: "{{ k8s_namespace }}"
-    #     update_repo_cache: true
-    #     create_namespace: true
-    #     values: "{{ lookup('template', 'monitoring/loki-values.yaml.j2') | from_yaml }}"
+    - name: Install Helm package with values loaded from template
+      community.kubernetes.helm:
+        name: "{{ monitoring_loki_helm_release_name }}"
+        chart_ref: "{{ monitoring_loki_helm_repo_name }}/{{ monitoring_loki_helm_chart_name }}"
+        kubeconfig: "{{ k8s_config }}"
+        context: "{{ k8s_context }}"
+        release_namespace: "{{ k8s_namespace }}"
+        update_repo_cache: true
+        create_namespace: true
+        values: "{{ lookup('template', 'monitoring/loki-values.yaml.j2') | from_yaml }}"
 
     - name: Set facts for Promtail Helm chart
       ansible.builtin.set_fact:
