Change Deployment Settings

--- a/03_setup_k8s_platform/vars/monitoring_loki.yml
+++ b/03_setup_k8s_platform/vars/monitoring_loki.yml
@@ -4,8 +4,8 @@ HELM_REPO_URL: https://grafana.github.io/helm-charts
 HELM_CHART_NAME: loki
 HELM_RELEASE_NAME: monitoring-loki
 
-HELM_PROMTAIL_CHART_NAME: loki
-HELM_PROMTAIL_RELEASE_NAME: monitoring-loki
+HELM_PROMTAIL_CHART_NAME: promtail
+HELM_PROMTAIL_RELEASE_NAME: monitoring-promtail
 
 image_loki_repository: "grafana/loki"
 image_loki_tag: "2.2.0"
