Automatically add datadosurce

--- a/03_setup_k8s_platform/deploy_monitoring_grafana.yml
+++ b/03_setup_k8s_platform/deploy_monitoring_grafana.yml
@@ -90,7 +90,7 @@
         grafana_password: "{{ monitoring_grafana.admin_password }}"
         org_id: "1"
         ds_type: "loki"
-        access: server
+        access: direct
         ds_url: "http://monitoring-loki:3100"
 
  
