Automatically add datadosurce

--- a/03_setup_k8s_platform/deploy_monitoring_grafana.yml
+++ b/03_setup_k8s_platform/deploy_monitoring_grafana.yml
@@ -84,13 +84,11 @@
 
     - name: Create loki datasource
       community.grafana.grafana_datasource:
-        name: "loki"
+        name: "Loki"
         grafana_url: "https://moni.{{ default.GENERAL_DOMAIN_NAME }}"
         grafana_user: "{{ monitoring_grafana.admin_user }}"
         grafana_password: "{{ monitoring_grafana.admin_password }}"
         org_id: "1"
         ds_type: "loki"
-        access: direct
+        access: proxy
         ds_url: "http://monitoring-loki:3100"
-
- 
