--- a/03_setup_k8s_platform/vars/public_oauth2_proxy.yml
+++ b/03_setup_k8s_platform/vars/public_oauth2_proxy.yml
@@ -8,7 +8,7 @@ HELM_RELEASE_NAME: oauth2-proxy
 
 image_registry: "docker.io"
 image_repository: "bitnami/oauth2-proxy"
-image_tag: "v7.1.3"
+image_tag: "7.1.3"
 image_pullPolicy: IfNotPresent
 
 pvc_enabled: true
