--- a/03_setup_k8s_platform/files/helmcharts/webgis-qgisserver/values.yaml
+++ b/03_setup_k8s_platform/files/helmcharts/webgis-qgisserver/values.yaml
@@ -68,3 +68,19 @@ nginx:
   #----------------------------------
   default_conf: "/etc/nginx/conf.d/"
   qgis_conf: "qgis-nginx.conf"
+
+ingress:
+  #----------------------------------
+  # Ingress configuration
+  #----------------------------------
+  enabled: false
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: webgis-mapserver.local
+      paths: []
+  tls: []
+    # - secretName: webgis-mapserver-tls
+    #   hosts:
+    #     - webgis-mapserver.local
