Issue #84: Updated Ansible playbook and Helm chart of QGIS Server. - Helm chart: value of 'qgis.pgservicefile' is now used for env PGSERVICEFILE and as name of volumeMount - Ansible playbook now   - creates the file '/home/qgis/.pg_service.conf' with content of 'qgis.pgservicefile' in Pod with QGIS Server component 'server' .   - restarts the Pod with QGIS Server component 'http'.   so QGIS Server throws an exception, when opening the URL 'https://mapserver.utr-k8s.urban-data.cloud/qgis-server/?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetCapabilities'.

--- a/03_setup_k8s_platform/files/helmcharts/webgis-qgisserver/templates/qgis-deployment.yaml
+++ b/03_setup_k8s_platform/files/helmcharts/webgis-qgisserver/templates/qgis-deployment.yaml
@@ -47,7 +47,7 @@ spec:
             - name: DEBUG
               value: {{ .Values.qgis.debug | quote }}
             - name: PGSERVICEFILE
-              value: "{{ .Values.qgis.pgservicefile_dir}}/pg_service.conf"
+              value: "{{ .Values.qgis.pgservicefile_dir}}/{{ .Values.qgis.pgservicefile}}"
           volumeMounts:
             - name: qgis-project-file
               mountPath: {{ .Values.qgis.data_dir | quote }}
@@ -63,4 +63,4 @@ spec:
             secretName: {{ $secretName }}
             items:
               - key: pg_service.conf
-                path: pg_service.conf
+                path: {{ .Values.qgis.pgservicefile }}
