--- a/03_setup_k8s_platform/deploy_webgis_qgisserver_playbook.yml
+++ b/03_setup_k8s_platform/deploy_webgis_qgisserver_playbook.yml
@@ -212,3 +212,61 @@
         state: present
         apply: yes
       when: qgis_file_content is defined
+
+    - name: Get Pod running QGIS Server component http
+      community.kubernetes.k8s_info:
+        kubeconfig: "{{ k8s_config }}"
+        context: "{{ k8s_context }}"
+        namespace: "{{ k8s_namespace }}"
+        kind: Pod
+        label_selectors:
+          - app.kubernetes.io/instance=geodata-qgisserver
+          - app=webgis-qgisserver
+          - component=http
+      register: qgis_server_http_pod_info
+
+    - name: Get name of Pod running QGIS Server component http
+      ansible.builtin.set_fact:
+        qgis_server_http_pod_name: "{{ qgis_server_http_pod_info['resources'][0]['metadata']['name'] }}"
+      when: qgis_server_http_pod_info is defined
+
+    - name: Get Pod running QGIS Server component server
+      community.kubernetes.k8s_info:
+        kubeconfig: "{{ k8s_config }}"
+        context: "{{ k8s_context }}"
+        namespace: "{{ k8s_namespace }}"
+        kind: Pod
+        label_selectors:
+          - app.kubernetes.io/instance=geodata-qgisserver
+          - app=webgis-qgisserver
+          - component=server
+      register: qgis_server_server_pod_info
+
+    - name: Get name of Pod running QGIS Server component server
+      ansible.builtin.set_fact:
+        qgis_server_server_pod_name: "{{ qgis_server_server_pod_info['resources'][0]['metadata']['name'] }}"
+      when: qgis_server_server_pod_info is defined
+
+    - debug:
+        msg: "Name of HTTP Pod: {{ qgis_server_http_pod_name }}"
+
+    - debug:
+        msg: "Name of Server Pod: {{ qgis_server_server_pod_name }}"
+
+    - name: Create /home/qgis/.pg_service.conf in Pod running QGIS Server component server
+      ansible.builtin.shell: |
+        kubectl --kubeconfig {{ k8s_config }} -n {{ k8s_namespace | lower }} exec {{ qgis_server_server_pod_name }} -- bash -c "cat {{ qgisserver.pgservicefile_dir }}/{{ qgisserver.pgservicefile }} > /home/qgis/.pg_service.conf"
+      args:
+        executable: /bin/bash
+      when: qgis_server_http_pod_name is defined
+
+    - name: Restart Pod running QGIS Server component http
+      ansible.builtin.shell: |
+        kubectl --kubeconfig="{{ k8s_config }}" --namespace "{{ k8s_namespace | lower }}" delete pod "{{ qgis_server_http_pod_name }}"
+      args:
+        executable: /bin/bash
+      when: qgis_server_http_pod_name is defined
+
+    - name: Pause one minute to wait until Pod has been restarted
+      pause:
+        minutes: 1
