Issue #61: Changes: - Disabled creating and copying of file 'settings.js'. - Disabled reading of ENV variable 'NR_SECRETS_KEY'. - Set NodeRed Helm chart parameter 'enableProjects' = "true" - Set NodeRed Helm chart parameter 'flows' = "sc-node-red-flows"

--- a/03_setup_k8s_platform/deploy_dataflow_stack.yml
+++ b/03_setup_k8s_platform/deploy_dataflow_stack.yml
@@ -5,18 +5,18 @@
   hosts: localhost
   gather_facts: false
 
-  vars:
-    - NR_SECRETS_KEY: "{{ lookup('env', 'NR_SECRETS_KEY') }}"
+  # vars:
+  #   - NR_SECRETS_KEY: "{{ lookup('env', 'NR_SECRETS_KEY') }}"
 
   tasks:
 
-    - name: Verify necessary environment variables are set
-      ansible.builtin.fail:
-        msg: "ERROR: environment variable {{ item.key | upper }} is not set."
-      when: item.value  == ""
-      with_items:
-        - { key: NR_SECRETS_KEY, value: "{{ NR_SECRETS_KEY }}" }
-      tags: always
+    # - name: Verify necessary environment variables are set
+    #   ansible.builtin.fail:
+    #     msg: "ERROR: environment variable {{ item.key | upper }} is not set."
+    #   when: item.value  == ""
+    #   with_items:
+    #     - { key: NR_SECRETS_KEY, value: "{{ NR_SECRETS_KEY }}" }
+    #   tags: always
 
     - name: Read default values
       ansible.builtin.include_vars:
