--- a/03_setup_k8s_platform/vars/dataflow-stack/08_indicate_energy.yml
+++ b/03_setup_k8s_platform/vars/dataflow-stack/08_indicate_energy.yml
@@ -20,9 +20,9 @@ fullnameOverride: ""
 livenessProbePath: /
 readinessProbePath: /
 # -
-flows: "flow.json"
+flows: "sc-node-red-flows"
 safeMode: "false"
-enableProjects: "false"
+enableProjects: "true"
 nodeOptions: ""
 extraEnvs: []
 timezone: "UTC"
