Issues #89 and #85: - Nginx config: value of parameter 'server_name' is now a FQDN. - Nginx config: CORS is now enabled for GET, POST and OPTIONS requests, coming from Hosts of the specified domain

--- a/03_setup_k8s_platform/files/helmcharts/webgis-qgisserver/values.yaml
+++ b/03_setup_k8s_platform/files/helmcharts/webgis-qgisserver/values.yaml
@@ -68,6 +68,8 @@ nginx:
   #----------------------------------
   default_conf: "/etc/nginx/conf.d/"
   qgis_conf: "qgis-nginx.conf"
+  server_name: "_"
+  cors_origin: "*"
 
 ingress:
   #----------------------------------
