--- a/03_setup_k8s_platform/files/helmcharts/webgis-qgisserver/templates/http-configmap.yaml
+++ b/03_setup_k8s_platform/files/helmcharts/webgis-qgisserver/templates/http-configmap.yaml
@@ -8,7 +8,7 @@ data:
   default.conf: |
     server {
       listen {{ .Values.qgis.http.ports.servicePort }};
-      server_name _;
+      server_name {{ .Values.nginx.server_name }};
       location / {
         root  /usr/share/nginx/html;
         index index.html index.htm;
@@ -19,5 +19,35 @@ data:
         gzip off;
         include fastcgi_params;
         fastcgi_pass {{ $fullName }}:{{ .Values.qgis.server.ports.servicePort }};
+
+        if ($request_method = 'OPTIONS') {
+          add_header 'Access-Control-Allow-Origin' '{{ .Values.nginx.cors_origin }}';
+          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+          #
+          # Custom headers and headers various browsers *should* be OK with but aren't
+          #
+          add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+          #
+          # Tell client that this pre-flight info is valid for 20 days
+          #
+          add_header 'Access-Control-Max-Age' 1728000;
+          add_header 'Content-Type' 'text/plain; charset=utf-8';
+          add_header 'Content-Length' 0;
+          return 204;
+        }
+
+        if ($request_method = 'POST') {
+          add_header 'Access-Control-Allow-Origin' '{{ .Values.nginx.cors_origin }}';
+          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+          add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+          add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+        }
+
+        if ($request_method = 'GET') {
+          add_header 'Access-Control-Allow-Origin' '{{ .Values.nginx.cors_origin }}';
+          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+          add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+          add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+        }
       }
     }
