Issue #60: Initial commit. - Deploy PostgreSQL database via Zalando operator. - Deploy KeyCloak operator.
TODO:
- Create CRs (will be done by Thomas Haarhoff).
- Deploy OpenLDAP.
- Documentation.

--- a/03_setup_k8s_platform/vars/default.yml
+++ b/03_setup_k8s_platform/vars/default.yml
@@ -17,10 +17,13 @@ K8S_CONTEXT: microk8s
 K8S_NAMESPACE_GEODATA: geodata
 K8S_NAMESPACE_CKAN: ckan
 K8S_NAMESPACE_FROST: frost-server
+K8S_NAMESPACE_POSTGRES_OPERATOR: op-postgres
+K8S_NAMESPACE_MINIO_OPERATOR: op-minio
 K8S_NAMESPACE_DATA_MANAGEMENT_OPERATOR: data-management
 K8S_NAMESPACE_PUBLIC: public
 K8S_NAMESPACE_MONITORING: monitoring-logging
 K8S_NAMESPACE_DATAFLOWSTACK: dataflow-stack
+K8S_NAMESPACE_IDMSTACK: idm-stack
 K8S_INGRESS_CLASS: public
 
 # GitLab-API-URL
