Frost adjustment to disable nodeport

--- a/03_setup_k8s_platform/deploy_frost_playbook.yml
+++ b/03_setup_k8s_platform/deploy_frost_playbook.yml
@@ -147,9 +147,10 @@
           -- bash -c "psql -U {{ postgres.super_username }} -d {{ frost.frost_db_database }} -c 'CREATE EXTENSION postgis;'"
       register: result
       until: result.rc == 0
-      retries: 10
+      retries: 1
       delay: 5
       changed_when: True
+      ignore_errors: yes
 
     - name: Get password of user sensorthings, created by Zalando operator
       community.kubernetes.k8s_info:
